Project

General

Profile

Actions

Bug #57589

closed

cephfs-data-scan: scan_links is not verbose enough

Added by Mykola Golub over 1 year ago. Updated 8 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Administration/Usability
Target version:
% Done:

100%

Source:
Tags:
backport_processed
Backport:
quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
tools
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

cephfs-data-scan is used to recover cluster. Depending on the fs size to recover it may run for hours or even days, and a possibility to estimate how long it would run is very useful for users waiting for recover. For this we run cephfs-data-scan with --debug-mds=10 setting, and from logs may calculate how many objects (inodes) processed so far and estimate the progress. It works well for "scan_extents" and "scan_inodes" steps, but not well for "scan_links", because it does not log enough data about its activity.

This can be easily fixed by adding some debug messages to the tool.

I am creating a ticket for this simple task just to be able to backport the change.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #57820: quincy: cephfs-data-scan: scan_links is not verbose enoughResolvedMykola GolubActions
Copied to CephFS - Backport #57821: pacific: cephfs-data-scan: scan_links is not verbose enoughResolvedMykola GolubActions
Actions #1

Updated by Mykola Golub over 1 year ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 48161
Actions #2

Updated by Venky Shankar over 1 year ago

  • Project changed from RADOS to CephFS
  • Category set to Administration/Usability
  • Target version set to v18.0.0
  • Component(FS) tools added
Actions #3

Updated by Rishabh Dave over 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot over 1 year ago

  • Copied to Backport #57820: quincy: cephfs-data-scan: scan_links is not verbose enough added
Actions #5

Updated by Backport Bot over 1 year ago

  • Copied to Backport #57821: pacific: cephfs-data-scan: scan_links is not verbose enough added
Actions #6

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #7

Updated by Konstantin Shalygin 8 months ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF