cephfs-data-scan: make scan_links more verbose

Fixes: https://tracker.ceph.com/issues/57589
Signed-off-by: Mykola Golub <mykola.golub@clyso.com>
(cherry picked from commit 1a675dd2a3a7bb39cc4aef8fe4032c9fe6b88633)